--- a/tests/fixtures/fixtures_example.yaml
+++ b/tests/fixtures/fixtures_example.yaml
@@ -97,7 +97,7 @@ dataset: 'testDS1'
 directory: !Path '../czis'
 filename: 20221113_sheep_RWM_cd34_x20_0.12umpiz_01.czi
 groups: null
-md5sum: ''
+md5sum: 'ff19746f8738686e51e2f7eb91dbed00'
 metadata:
   Experimenter|UserName: hsuz002
   Image|AcquisitionDate: '2022-11-13T04:57:29.218'
@@ -177,7 +177,7 @@ dataset: 'testDS1'
 directory: !Path '../czis'
 filename: 20221113_slide3-1_humanRWM_cd34_x5_0.62umpix_01.czi
 groups: null
-md5sum: ''
+md5sum: '72439a2b1ee2343279b05b51353a2473'
 metadata:
   Experimenter|UserName: hsuz002
   Image|AcquisitionDate: '2022-11-13T03:38:28.441'
@@ -240,7 +240,7 @@ dataset: 'testds2'
 directory: !Path '../oibs'
 filename: 20190812 HF 01 stack.oib
 groups: null
-md5sum: ''
+md5sum: 'b04b6477fb63bea9a16fa92f0718bc31'
 metadata:
   Image|Pixels|Channel|Channel:0:0|DetectorSettings|ID: Detector:0:0
   Image|Pixels|Channel|Channel:0:0|EmissionWavelength: '520.0'
@@ -299,7 +299,7 @@ dataset: 'testds2'
 directory: !Path '../oibs'
 filename: 20190812 NT 100x 01 slice.oib
 groups: null
-md5sum: ''
+md5sum: 'cca4746b1c44b88ea971567c78c7f21b'
 metadata:
   Image|Pixels|Channel|Channel:0:0|DetectorSettings|ID: Detector:0:0
   Image|Pixels|Channel|Channel:0:0|EmissionWavelength: '520.0'
