Exclude the samples directory from mypy checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ ignore_missing_imports = true
 exclude = [
        "^tests/.*$",
        "^docs/.*$",
+       "^samples/.*$",
        ]
 plugins = ["pydantic.mypy"]
 strict = true
