--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-slugify = "^8.0.1"
 dependency-injector = "^4.41.0"
 pydantic-settings = "^2.0.3"
 validators = "^0.22.0"
+typer = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 wily = "^1.25.0"
@@ -51,6 +52,7 @@ flake8-pyproject = "^1.2.3"
 toml = "^0.10.2"
 pyproject-pre-commit = "^0.0.28"
 pyfakefs = "^5.3.1"
+diskcache = "^5.6.3"
 
 [tool.isort]
 profile = "black"
