--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-slugify = "^8.0.1"
 dependency-injector = "^4.41.0"
 pydantic-settings = "^2.0.3"
 validators = "^0.22.0"
+typer = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 wily = "^1.25.0"
