--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependency-injector = "^4.41.0"
 pydantic-settings = "^2.0.3"
 validators = "^0.22.0"
 typer = "^0.9.0"
+rocrate = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 wily = "^1.25.0"
