Update storage config example

--- a/.env-example
+++ b/.env-example
@@ -11,10 +11,9 @@ CONNECTION__HOSTNAME=https://test-mytardis.nectar.auckland.ac.nz/
 #CONNECTION__PROXY__HTTP=
 #CONNECTION__PROXY__HTTPS=
 
-# Storage, prefix with STORAGE__
-STORAGE__SOURCE_DIRECTORY=~/data
-STORAGE__TARGET_DIRECTORY=/srv/mytardis
-STORAGE__BOX=new box at /srv/mytardis
+# Ingestion storagebox details, prefix with STORAGE__
+STORAGE__STORAGE_NAME=storagebox-name
+STORAGE__TARGET_ROOT_DIR=/srv/storagebox-dir/
 
 # Schema, prefix with MYTARDIS_SCHEMA__
 # DEFAULT_SCHEMA__PROJECT=https://test.test.com
