--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,19 +10,15 @@ python = ">=3.10,<3.12"
 requests = "^2.31.0"
 backoff = "^2.2.1"
 PyYAML = "^6.0"
-python-decouple = "^3.8"
-types-PyYAML = "^6.0.12"
 pydantic = "^2.8.2"
 pytz = "^2024.1"
-python-dateutil = "^2.8.2"
 types-pytz = "^2024.1.0.20240417"
-types-python-dateutil = "^2.8.19.13"
 python-slugify = "^8.0.1"
-dependency-injector = "^4.41.0"
 pydantic-settings = "^2.3.4"
 validators = "^0.28.3"
 typer = "^0.12.0"
 rocrate = "^0.10.0"
+typing-extensions = "^4.12.2"
 
 [tool.poetry.group.dev.dependencies]
 wily = "^1.25.0"
@@ -55,6 +51,7 @@ pyproject-pre-commit = "^0.1.4"
 pyfakefs = "^5.3.1"
 black = "^24.4.0"
 isort = "^5.13.2"
+deptry = "^0.16.2"
 
 [tool.poetry.scripts]
 ids = 'src.ids:app'
