--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ validators = "^0.28.3"
 typer = "^0.12.0"
 rocrate = "^0.10.0"
 typing-extensions = "^4.12.2"
+types-pyyaml = "^6.0.12.20240311"
 
 [tool.poetry.group.dev.dependencies]
 wily = "^1.25.0"
