--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ pyfakefs = "^5.3.1"
 black = "^24.4.0"
 isort = "^5.13.2"
 deptry = "^0.17.0"
+types-python-dateutil = "^2.9.0.20240316"
 
 [tool.poetry.scripts]
 ids = 'src.ids:app'
