--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ typer = "^0.12.0"
 rocrate = "^0.10.0"
 typing-extensions = "^4.12.2"
 types-pyyaml = "^6.0.12.20240311"
+typeguard = "^4.3.0"
 
 [tool.poetry.group.dev.dependencies]
 wily = "^1.25.0"
@@ -53,6 +54,7 @@ pyfakefs = "^5.3.1"
 black = "^24.4.0"
 isort = "^5.13.2"
 deptry = "^0.17.0"
+types-python-dateutil = "^2.9.0.20240316"
 
 [tool.poetry.scripts]
 ids = 'src.ids:app'
