Replace backoff with tenacity for retries in the MyTardis client, and speedup the backoff test bigly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ packages = [{include = "src"}]
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
 requests = "^2.31.0"
-backoff = "^2.2.1"
 PyYAML = "^6.0"
 pydantic = "^2.8.2"
 pytz = "^2024.1"
@@ -21,6 +20,7 @@ rocrate = "^0.10.0"
 typing-extensions = "^4.12.2"
 types-pyyaml = "^6.0.12.20240808"
 typeguard = "^4.3.0"
+tenacity = "^9.0.0"
 
 [tool.poetry.group.dev.dependencies]
 wily = "^1.25.0"
