--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ packages = [{include = "src"}]
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
 requests = "^2.31.0"
-backoff = "^2.2.1"
 PyYAML = "^6.0"
 pydantic = "^2.8.2"
 pytz = "^2024.1"
@@ -18,6 +17,7 @@ pydantic-settings = "^2.3.4"
 validators = "^0.33.0"
 typer = "^0.12.0"
 rocrate = "^0.10.0"
+tenacity = "^9.0.0"
 typing-extensions = "^4.12.2"
 types-pyyaml = "^6.0.12.20240808"
 typeguard = "^4.3.0"
