--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytz = "^2024.1"
 types-pytz = "^2024.1.0.20240417"
 python-slugify = "^8.0.1"
 pydantic-settings = "^2.3.4"
+requests-cache = "^1.2.1"
 validators = "^0.33.0"
 typer = "^0.12.0"
 rocrate = "^0.10.0"
